--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,17 @@
 {
   "manifest_version": 2,
   "name": "Unblock NetEase Music",
-  "description": "This extension should do it's thing...",
+  "description": "This extension would unblock netease music website!", 
   "version": "1.0",
   
   "browser_action": {
     "default_icon": "icon.png",
-    "default_popup": "popup.html"    
+    "default_popup": "popup.html"
   },
   "permissions": [
-    "management",
+    "tabs",
     "activeTab",
     "proxy",
     "http://cn-proxy.com/"
-  ],
-  "background": {
-    "scripts": [
-      "proxy.js"
-    ]
-  }
-
-
+  ]
 }
